# opencv_contrib

modules/rgbd/: CMakeLists.txt
